# customerService-Agent

./: .dockerignore  .env.example  .gitignore  Dockerfile.backend  Dockerfile.frontend  README.md  app.py  compose.yml  pyproject.toml
agent/: __init__.py  agui.py  customer_agent.py  react_agent.py
agent/tools/: agent_tools.py
config/: rag.yml
core/: __init__.py  customer_data.py  database.py  retrieval.py  settings.py  temporal_activities.py  temporal_runtime.py  temporal_workflows.py
data/: 官方资料-基站与扫拖系统.txt  官方资料-导航地图与回充.txt  官方资料-故障分级与安全边界.txt  官方资料-清洁系统与耗材维护.txt  官方资料-联网与App排障.txt  扫地机器人100问2.txt  扫拖一体机器人100问.txt  故障排除.txt  维护保养.txt  选购指南.txt
deploy/: nginx.conf
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.css  App.tsx  index.css
model/: factory.py
prompts/: main_prompt.txt  report_prompt.txt
rag/: vector_store.py
tests/: test_agui.py  test_customer_data.py  test_database.py  test_retrieval.py
utils/: config_handler.py  prompt_loader.py
