[project]
name = "langchain-react-agent"
version = "0.1.0"
description = "FastAPI and React LangChain ReAct agent demo for robot vacuum customer service."
requires-python = ">=3.11,<3.13"
dependencies = [
    "chromadb==1.5.8",
    "fastapi>=0.136.1",
    "langchain==1.1.3",
    "langchain-chroma==1.1.0",
    "langchain-community==0.4.1",
    "langchain-core==1.3.1",
    "langchain-google-genai>=4.2.2",
    "langchain-openai>=1.2.0",
    "langchain-text-splitters==1.1.2",
    "langgraph==1.0.10",
    "langgraph-prebuilt==1.0.8",
    "pypdf==5.1.0",
    "python-dotenv>=1.2.2",
    "pyyaml==6.0.2",
    "sse-starlette>=3.3.4",
    "uvicorn>=0.46.0",
]

[tool.uv]
package = false
