[project]
name = "customer-service-agent"
version = "0.1.0"
description = "Production-oriented customer service agent using PydanticAI, AG-UI, Qdrant, PostgreSQL, and Temporal."
requires-python = ">=3.11,<3.13"
dependencies = [
    "ag-ui-protocol>=0.1.19",
    "aiosqlite>=0.22.1",
    "asyncpg>=0.31.0",
    "fastapi>=0.136.1",
    "fastembed>=0.8.0",
    "httpx>=0.28.1",
    "pydantic-ai-slim[mcp,openai]>=1.107.0",
    "pydantic-settings>=2.14.0",
    "qdrant-client>=1.18.0",
    "sqlalchemy[asyncio]>=2.0.49",
    "temporalio>=1.16",
    "uvicorn>=0.46.0",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
